# haskell-ch24exercises

./: README.md  ch24exercises.cabal  stack.yaml
src/: InChapterExercises.hs
