name:                ch24exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jisantuc/ch24exercises#readme
license:             BSD3
license-file:        LICENSE
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2018 James Santucci
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     InChapterExercises
  build-depends:       base >= 4.7 && < 5
                     , trifecta
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jisantuc/ch24exercises
